--- a/pixi.toml
+++ b/pixi.toml
@@ -1,10 +1,13 @@
 [workspace]
 name = "tldr"
+version = "0.1.0"
 channels = ["conda-forge"]
 platforms = ["linux-64", "osx-64"]
 
 [dependencies]
 python = ">=3.11"
+setuptools = ">=68.0"
+wheel = "*" 
 
 [pypi-dependencies]
 openai = ">=1.78.1"
@@ -15,5 +18,3 @@ pillow = ">=10.2.0"
 pyyaml = ">=6.0.1"
 jsonschema = ">=4.21.1"
 build = "*"
-setuptools = "*"
-wheel = ""
